added new changes for the execution date and filter

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,8 +23,8 @@
 
     <header class="card center-header">
         <img src="/assets/loggo.png" class="company-logo"/>
-        <div class="app-title">Allure Dashboard</div>
-        <div class="app-sub">Centralized Allure Reports</div>
+        <div class="app-title">Report Dashboard</div>
+        <div class="app-sub">Centralized Reports</div>
     </header>
 
     <section class="card">
